# davis

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  ChangeLog  Makefile  README  cmake_install.cmake  install_manifest.txt  libcaer.pc  libcaer.pc.in  libcaerConfig.cmake  libcaerConfigVersion.cmake  sonar-project.properties
cmakemod/: caer-base.cmake  libcaerConfig.cmake.in
docs/: 65-inivation.rules  RELEASE.txt
examples/: .gitignore  CMakeLists.txt  davis_cvgui.cpp  davis_cvgui_filters.cpp  davis_enable_aer.cpp  davis_rpi.cpp  davis_rpi_benchmark.cpp  davis_simple.c  davis_simple.cpp  davis_simple_2cam.c  davis_text.cpp  device_discovery.c  dvs128_simple.c  dvs128_simple.cpp  dvx_bw_test.cpp  dvxplorer.cpp  dynapse_simple.c  edvs_simple.c  edvs_simple.cpp  samsung_evk.cpp
include/: Makefile  cmake_install.cmake
include/libcaer/: CMakeLists.txt  Makefile  cmake_install.cmake  libcaer.h.in
include/libcaercpp/: Makefile  cmake_install.cmake  network.hpp
include/libcaercpp/devices/: davis.hpp  device.hpp  device_discover.hpp  dvs128.hpp  dvs132s.hpp  dvxplorer.hpp  dynapse.hpp  edvs.hpp  samsung_evk.hpp  serial.hpp  usb.hpp
include/libcaercpp/events/: common.hpp  frame.hpp  imu6.hpp  imu9.hpp  packetContainer.hpp  polarity.hpp  special.hpp  spike.hpp
include/libcaercpp/filters/: dvs_noise.hpp
packaging/fedora-source-package/: libcaer.spec  packageFedora.sh
packaging/linux/: arch-release.sh  brew-release.sh  gentoo-release.sh  libcaer-arch.pkgbuild  libcaer-brew.rb  libcaer-gentoo.ebuild
packaging/ubuntu-source-package/: packageUbuntu.sh
packaging/ubuntu-source-package/bionic/: control  rules
packaging/ubuntu-source-package/focal/: control  rules
packaging/ubuntu-source-package/xenial/: control  rules
src/: CMakeLists.txt  Makefile  autoexposure.c  autoexposure.h  c11threads_posix.h  cmake_install.cmake  container_generation.h  data_exchange.h  davis.c  davis.h  davis_common.h  davis_rpi.c  davis_rpi.h  device.c  device_discover.c  dvs128.c  dvs128.h  dvs132s.c  dvs132s.h  dvxplorer.c  dvxplorer.h  dynapse.c  dynapse.h  edvs.c  edvs.h  filters_dvs_noise.c  frame_utils.c  frame_utils_opencv.cpp  log.c  portable_aligned_alloc.h  portable_time.h  ringbuffer.c  samsung_evk.c  samsung_evk.h  spi_config_interface.h  timestamps.h  usb_utils.c  usb_utils.h
